--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -25,13 +25,17 @@
       padding: 0;
       height: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      /* background: linear-gradient(135deg, #a8edea, #fed6e3); */
     }
 
     .background {
+      
       position: fixed;
       width: 100%;
       height: 100%;
-      background: url("https://images.unsplash.com/photo-1496309732348-3627f3f040ee?auto=format&fit=crop&w=1950&q=80") no-repeat center center/cover;
+      background: url("https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1740&q=80") no-repeat center center/cover;
+
+      /* background: url("") no-repeat center center/cover; */
       filter: blur(6px);
       z-index: -1;
     }
@@ -57,7 +61,7 @@
       padding: 2rem;
       border-radius: 15px;
       width: 400px;
-      color: #fff;
+      color: #0a0a0a;
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
       text-align: center;
     }
@@ -76,10 +80,10 @@
     }
 
     .login-box button {
-      width: 100%;
+      width: 90%;
       padding: 0.7rem;
       background-color: #00a8ff;
-      color: white;
+      color: rgb(11, 11, 11);
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -93,7 +97,7 @@
     .login-box a {
       display: block;
       margin-top: 1rem;
-      color: #f1f1f1;
+      color: #0a0a0a;
       font-size: 0.9rem;
       text-decoration: underline;
     }
