--- a/frontends/src/Login.css
+++ b/frontends/src/Login.css
@@ -31,6 +31,7 @@ body, html, #root {
 }
 
 .login-box {
+  height: 100%;
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(8px);
   padding: 2rem;
