--- a/frontends/src/Register.css
+++ b/frontends/src/Register.css
@@ -42,6 +42,7 @@ body, html {
 
 .register-box h2 {
   margin-bottom: 1.5rem;
+  color: rgb(8, 221, 185);
 }
 
 .register-box input {
@@ -65,7 +66,7 @@ body, html {
 }
 
 .register-box button:hover {
-  background-color: #26a69a;
+  background-color: #6ef759;
 }
 
 .register-box a {
