--- a/frontends/src/home.css
+++ b/frontends/src/home.css
@@ -36,7 +36,7 @@ body, html, #root {
   align-items: center;
   justify-content: center;
   height: 100%;
-  color: #f1f1f1;
+  color: #ff7878;
   text-align: center;
   padding: 2rem;
 }
